--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,6 @@ volumes:
     driver: local
   kestra_data:
     driver: local
-
 services:
   pgdatabase:
     image: postgres:18
@@ -20,7 +19,6 @@ services:
     depends_on:
       kestra:
         condition: service_started
-
   pgadmin:
     image: dpage/pgadmin4
     environment:
@@ -31,7 +29,6 @@ services:
     depends_on:
       pgdatabase:
         condition: service_started
-
   kestra_postgres:
     image: postgres:18
     volumes:
@@ -45,13 +42,9 @@ services:
       interval: 30s
       timeout: 10s
       retries: 10
-
   kestra:
     image: kestra/kestra:v1.1
     pull_policy: always
-    # Note that this setup with a root user is intended for development purpose.
-    # Our base image runs without root, but the Docker Compose implementation needs root to access the Docker socket
-    # To run Kestra in a rootless mode in production, see: https://kestra.io/docs/installation/podman-compose
     user: "root"
     command: server standalone
     volumes:
@@ -69,7 +62,7 @@ services:
         kestra:
           server:
             basicAuth:
-              username: "admin@kestra.io" # it must be a valid email address
+              username: "admin@kestra.io"
               password: Admin1234!
           repository:
             type: postgres
@@ -82,11 +75,10 @@ services:
           tasks:
             tmpDir:
               path: /tmp/kestra-wd/tmp
-          url: http://localhost:8080/
+          url: http://localhost:8082/
     ports:
-      - "8080:8080"
-      - "8081:8081"
+      - "8082:8080"
+      - "8083:8081"
     depends_on:
       kestra_postgres:
         condition: service_started
-    
